# ConvexOptimizer

./: .gitignore  CMakeLists.txt  README.md
src/: .optimizer.cpp.swp  .optimizer.h.swp  .utils.cpp.swp  .utils.h.swp  Makefile  functionwrapper.cpp  functionwrapper.h  funcwrapper.cpp  funcwrapper.h  main.cpp  optimizer.cpp  optimizer.h  utils.cpp  utils.h
src/cxx/: main.cpp
src/cxx/direction/: direcUpdate.cpp  direcUpdate.h  direcUpdate.inl
src/cxx/function/: functionwrapper.h  functionwrapper.inl  optimizer.cpp  optimizer.h  optimizer.inl
src/cxx/testing/: test_dot.cpp  test_mpi_direcUpdate.cpp  test_optimizer.cpp
src/cxx/utilities/: vec_utils.hpp  vec_utils.inl  vec_utils.tpp
src/python/: QuasiNewton.py  main.py  newton.py  optimizer.py  plot_traj.py  plot_util.py  test_hessian.py
